2004-11-14  Andrew Pinski  <pinskia@physics.uc.edu>

PR c/17279
        * c-common.c (c_common_nodes_and_builtins): Ask the back-end if we
        support TImode before adding __int128_t and __uint128_t types.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@90627 138bc75d-0d04-0410-961f-82ee72b054a4